--- a/ParkCommerce/projects/templates/projects/project.html
+++ b/ParkCommerce/projects/templates/projects/project.html
@@ -1,6 +1,7 @@
 {% extends "main.html" %}
 
 {% block content %}
+    <img src="{{ project.featured_image.url }}" alt="{{ project.name }}">
     <h1>Title: {{ project.title }}</h1>
     <h1>Description: {{ project.description }}</h1>
 {% for tag in tags%}
