--- a/ParkCommerce/projects/templates/projects/projects.html
+++ b/ParkCommerce/projects/templates/projects/projects.html
@@ -2,7 +2,6 @@
 {% block content %}
 <table>
     <tr>
-        <th>ID</th>
         <th>Project</th>
         <th>Votes</th>
         <th>Ratio</th>
@@ -10,11 +9,12 @@
     </tr>
     {% for project in projects %}
     <tr>
-        <td>{{ project.id }}</td>
         <td>{{ project.title }}</td>
         <td>{{ project.vote_total }}</td>
         <td>{{ project.vote_ratio }}✰</td>
         <td>{{ project.created }}</td>
+        <td><a href="{% url 'update-project' project.id %}">Edit</a> </td>
+        <td><a href="{% url 'delete-project' project.id %}">Delete</a> </td>
         <td><a href="{% url 'project' project.id %}">View</a></td>
     </tr>
     {% endfor %}
