--- a/ParkCommerce/projects/templates/projects/project_form.html
+++ b/ParkCommerce/projects/templates/projects/project_form.html
@@ -1,13 +1,45 @@
-{% extends 'main.html' %}
-
-    
-{% block content %}
-<h1>Project Form</h1>
-<form action="" METHOD="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit">
-</form>
+<!DOCTYPE html>
+<html lang="en">
 
 
-{% endblock %}
+<body>
+
+
+    <!-- Main Section -->
+    <main class="formPage my-xl">
+        <div class="content-box">
+            <div class="formWrapper">
+                <a class="backButton" href="#"><i class="im im-angle-left"></i></a>
+                <br>
+
+                <form class="form" method="POST">
+
+                    <!-- Input:Text -->
+                    <div class="form__field">
+                        <label for="formInput#text">Text Field: </label>
+                        <input class="input input--text" id="formInput#text" type="text" name="text"
+                            placeholder="Enter text" />
+                    </div>
+
+                    <!-- Input:Text -->
+                    <div class="form__field">
+                        <label for="formInput#text">Text Field: </label>
+                        <input class="input input--text" id="formInput#text" type="text" name="text"
+                            placeholder="Enter text" />
+                    </div>
+
+                    <!-- Input:Text -->
+                    <div class="form__field">
+                        <label for="formInput#text">Text Field: </label>
+                        <input class="input input--text" id="formInput#text" type="text" name="text"
+                            placeholder="Enter text" />
+                    </div>
+                    <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
+                </form>
+            </div>
+        </div>
+    </main>
+
+</body>
+
+</html>
